<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterActivity2"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedLogin"
        style="@style/TextField"
        android:layout_width="325dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLogin"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedPassword"
        style="@style/TextField"
        android:layout_gravity="center"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedPassword2"
        style="@style/TextField"
        android:layout_gravity="center"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/repassword"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword2"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedNumber"
        style="@style/TextField"
        android:layout_gravity="center"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNumber"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUp"
        style="@style/Button"
        android:layout_gravity="center"
        android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/ButtonOutline"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/cancel" />



</LinearLayout>