<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegistrationDialogFragment"
    android:background="@color/white_bezh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/question_for_deleting"
                android:textAlignment="textStart"
                android:textSize="25sp" />


        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/ButtonOutline"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/delete" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Button"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp"
            android:text="@string/cancel" />



    </LinearLayout>
</ScrollView>