<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_lines_2"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-50dp"
        app:cardBackgroundColor="#86FFFFFF"
        app:cardCornerRadius="50dp"
        app:cardElevation="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/buyanthin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom|center"
            android:layout_width="wrap_content"
            android:textSize="35sp"
            android:fontFamily="@font/buyanregular"
            android:textColor="@color/white"
            android:text="@string/account"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#C9F8F8F8"
        app:cardElevation="3dp"
        app:cardCornerRadius="35dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gilroy_light"
                style="@style/header"
               />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/TextField"
                android:layout_width="325dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLogin"
                    style="@style/changedText"
                    android:enabled="false"
                    android:padding="1dp"
                    android:text="login" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextPassword"
                style="@style/TextField"
                android:layout_width="325dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    style="@style/changedText"
                    android:drawableEnd="@drawable/ic_baseline_edit_24"
                    android:text="******"
                    android:padding="5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                style="@style/TextField"
                android:layout_width="325dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNumber"
                    style="@style/changedText"
                    android:text="+78653533444"
                    android:padding="1dp"
                    android:drawableEnd="@drawable/ic_baseline_edit_24"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveChange"
                style="@style/Button"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="изменить" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonToBookList"
                style="@style/Button"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="50dp"
                android:text="@string/my_booking_list" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>